KSENROLL-4831 fixed queries for the org search service and org search
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/branches/org-service@52326 0ac02d80-fb3f-11dc-a574-c57244a850eb